# resworb

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  resworb.rs
html/: Cargo.toml  lib.rs  tag_names.rs
html/elements/: Cargo.toml  interface.rs  lib.rs  tags.rs
html/elements/document/: html.rs  mod.rs
html/elements/embedded_content/: img.rs  mod.rs
html/elements/forms/: button.rs  mod.rs
html/elements/grouping_content/: blockquote.rs  div.rs  dl.rs  hr.rs  li.rs  mod.rs  ol.rs  pre.rs  ul.rs
html/elements/metadata/: head.rs  meta.rs  mod.rs  title.rs
html/elements/scripting/: mod.rs  script.rs  template.rs
html/elements/sections/: body.rs  heading.rs  mod.rs
html/elements/tables/: mod.rs  table.rs
html/elements/tags/: attributes.rs  names.rs
html/elements/text_level/: anchor.rs  mod.rs  span.rs
html/named-character-references/: Cargo.toml  lib.rs
html/named_characters/: mod.rs
html/parser/: Cargo.toml  codepoint.rs  error.rs  lib.rs  mod.rs  state.rs  token.rs  tokenizer.rs
html/parser/crashtests/: doctype.html  doctype_public.html  simple_tag.html  simple_tag_attributes.html  test.html
html/parser/crashtests/comment/: abrupt_closing_of_empty_comment.html  incorrectly_closed_comment.html  incorrectly_opened_comment.html  nested_comment.html
html/parser/crashtests/doctype/: abrupt_doctype_identifier.html  invalid_character_sequence_after_doctype_name.html  missing_doctype_identifier.html  missing_quote_before_doctype_identifier.html  missing_whitespace_after_doctype_keyword.html  missing_whitespace_before_doctype_name.html  missing_whitespace_between_doctype_identifiers.html
html/parser/crashtests/tag/: ambiguous_ampersand.html  eof_before_tag_name.html  missing_attribute_value.html  (+7 more)
html/parser/state/: element_pointers.rs  flags.rs  insertion_mode.rs  list_of_active_formatting_elements.rs  mod.rs  stack_of_open_elements.rs
html/parser/tokenization/: mod.rs  token.rs  tokenizer.rs
html/parser/tree_construction/: mod.rs
ui/gfx/: Cargo.toml  lib.rs
ui/gfx/window/: api.rs  mod.rs
(+119 files in other folders)
