[package]
name = "resworb-html"
version = "0.1.8"
license-file = "../LICENSE"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
parser = { path = "../parser", package = "resworb-parser" }
infra = { path = "../infra", package = "resworb-infra" }
