[package]
name = "resworb-gfx"
version = "0.1.0"
license-file = "../../LICENSE"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.37", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
